--- a/app/src/main/res/layout-v28/activity_flash_screen.xml
+++ b/app/src/main/res/layout-v28/activity_flash_screen.xml
@@ -22,8 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/baloo_bhaijaan"
-            android:lineHeight="65sp"
             android:text="@string/welcome_n_to"
+            android:lineHeight="65sp"
             android:textColor="#FFFFFF"
             android:textSize="48sp" />
 
@@ -36,13 +36,28 @@
             android:text="CM \nHELPLINE"
             android:textColor="#FFE082"
             android:textSize="48sp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
 
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="64dp"
+                android:layout_height="112dp"
+                android:layout_weight="1"
+                app:srcCompat="@android:drawable/stat_sys_phone_call" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/baloo_bhaijaan"
+                android:text="1905"
+                android:textColor="#FFFFFF"
+                android:textSize="60sp" />
         </LinearLayout>
 
 
