--- a/app/src/main/res/layout-v28/activity_flash_screen.xml
+++ b/app/src/main/res/layout-v28/activity_flash_screen.xml
@@ -9,21 +9,23 @@
 
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="322dp"
+        android:layout_height="434dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498">
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="match_parent"
+            android:layout_width="232dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/baloo_bhaijaan"
-            android:text="@string/welcome_n_to"
             android:lineHeight="65sp"
+            android:text="@string/welcome_n_to"
             android:textColor="#FFFFFF"
             android:textSize="48sp" />
 
@@ -36,29 +38,38 @@
             android:text="CM \nHELPLINE"
             android:textColor="#FFE082"
             android:textSize="48sp" />
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="295dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="64dp"
-                android:layout_height="112dp"
+                android:layout_width="1dp"
+                android:layout_height="85dp"
                 android:layout_weight="1"
                 app:srcCompat="@android:drawable/stat_sys_phone_call" />
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="146dp"
+                android:layout_height="77dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/baloo_bhaijaan"
                 android:text="1905"
                 android:textColor="#FFFFFF"
                 android:textSize="60sp" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="An intiative of goverment of tripura"
+            android:textColor="#FFFFFF"
+            android:textSize="15dp" />
 
 
     </LinearLayout>
